@@ -282,6 +282,8 @@ Trunk (unreleased changes)
 
     HDFS-616. Create functional tests for new design of the block report. (cos)
     
+    HDFS-584. Fail the fault-inject build if any advices are mis-bound. (cos)
+    
   BUG FIXES
 
     HDFS-76. Better error message to users when commands fail because of 
